# keylume

./: FIRMWARE.md  README.md  keylume.service  keylume.yaml.example  pyproject.toml
firmware/: install.sh  k8_pro.patch  keylume.c  keylume.h  keymap.c  rules.mk
src/keylume/: __init__.py  __main__.py  cli.py  config.py  daemon.py  hid.py  mixer.py  protocol.py  tray.py  types.py
src/keylume/plugins/: README.md  __init__.py  audio.py  base.py  idle.py  notify.py  screen.py
src/keylume/plugins/audio/: README.md
